Add support for fractional offsets and svg colors, update REAME and examples

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# Importar el módulo\n",
-    "from rxnplot import *"
+    "from rxnplot import plot, energy"
    ]
   },
   {
@@ -19,22 +19,28 @@
    "outputs": [],
    "source": [
     "# Crear un objeto de diagrama\n",
-    "p = plot(10.0, zero=energy(0.0, 'kjmol'), units='kcalmol', digits=1, qualified=True)\n",
+    "p = plot(height=8, zero=energy(0.0, 'kjmol'), units='kcalmol', decimals=1, qualified=True)\n",
     "\n",
     "# Agregar una línea base\n",
-    "p.add_baseline(colour=0x0, mode='dashed', opacity=0.1)\n",
+    "p.new_baseline(color='black', mode='dashed', opacity=0.1)\n",
     "\n",
     "# Agregar los niveles de energía\n",
-    "p.add_level(   '1', energy(   0.0, 'kjmol'))\n",
-    "p.add_level( 'EC1', energy( -75.5, 'kjmol'))\n",
-    "p.add_level('TS1a', energy(  74.0, 'kjmol'))\n",
-    "p.add_level( 'DC1', energy(-102.0, 'kjmol'))\n",
-    "p.add_level( 'TS2', energy( -42.0, 'kjmol'))\n",
-    "p.add_level(   '2', energy(-145.0, 'kjmol'))\n",
-    "p.new_branch()\n",
-    "p.add_level( 'EC1')\n",
-    "p.add_level('TS1b', energy(  10.0, 'kjmol'))\n",
-    "p.add_level(   '2')\n",
+    "p.new_level(  '1', energy(  0.0, 'kcalmol'))\n",
+    "p.new_level('TS1', energy( 8.7, 'kcalmol'))\n",
+    "p.new_level(  '2', energy(-11.5, 'kcalmol'))\n",
+    "p.new_level('TS2', energy( 13.4, 'kcalmol'), color='green')\n",
+    "p.new_level('DC1', energy(-10.4, 'kcalmol'), color='green')\n",
+    "p.new_level('TS3', energy(  2.8, 'kcalmol'), color='green')\n",
+    "p.new_level('DC2', energy(-22.2, 'kcalmol'), color='green')\n",
+    "p.new_level('TS4', energy( -1.4, 'kcalmol'), color='green')\n",
+    "p.new_level(  '3', energy(-20.6, 'kcalmol'))\n",
+    "p.new_level('TS5', energy( -6.9, 'kcalmol'))\n",
+    "p.new_level(  '4', energy(-26.8, 'kcalmol'))\n",
+    "p.new_branch('2')\n",
+    "p.new_level('TS6', energy(  7.4, 'kcalmol'), offset=1.8, color='red')\n",
+    "p.new_level('EC1', energy(-18.0, 'kcalmol'), offset=1.2, color='red')\n",
+    "p.new_level('TS7', energy( -6.5, 'kcalmol'), offset=1.2, color='red')\n",
+    "p.add_level('3')\n",
     "\n",
     "# Visualizar el diagrama\n",
     "p.render()"
@@ -43,12 +49,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4776812b-c182-43c7-901f-90a5a909c0a9",
+   "id": "e426c36b-6a4c-47cc-90f0-b7e0f6579979",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardar el diagrama en un archivo SVG\n",
-    "p.write(\"diagram1.svg\")"
+    "# Guardar el diagrama en un archivo PNG\n",
+    "p.write(\"diagram1.png\", scale=2)"
    ]
   },
   {
@@ -65,12 +71,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e426c36b-6a4c-47cc-90f0-b7e0f6579979",
+   "id": "4776812b-c182-43c7-901f-90a5a909c0a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardar el diagrama en un archivo PNG\n",
-    "p.write(\"diagram1.png\", scale=2)"
+    "# Guardar el diagrama en un archivo SVG\n",
+    "p.write(\"diagram1.svg\")"
    ]
   }
  ],
