Implement new_profile method

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Crear un objeto de diagrama\n",
-    "p = plot(height=8, zero=energy(0.0, 'kjmol'), units='kcalmol', decimals=1, qualified=True)\n",
+    "p = plot(height=8, zero=energy(0.0, 'kjmol'), units='kcalmol', decimals=1, qualified=False)\n",
     "\n",
     "# Agregar una línea base\n",
     "p.new_baseline(color='black', mode='dashed', opacity=0.1)\n",
@@ -43,6 +43,24 @@
     "p.add_level('3')\n",
     "\n",
     "# Visualizar el diagrama\n",
+    "p.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b0e087d-8048-45ce-93e7-cb22f1315c53",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.new_profile()\n",
+    "p.new_level(  '1a', energy(  12.0, 'kcalmol'), color='blue')\n",
+    "p.new_level('TS1a', energy( 23.4, 'kcalmol'), color='blue')\n",
+    "p.new_level(  '2a', energy(11.7, 'kcalmol'), color='blue')\n",
+    "p.new_level('TS2a', energy(31.0, 'kcalmol'), color='blue')\n",
+    "p.new_level(  'BC', energy(18.4, 'kcalmol'), color='blue')\n",
     "p.render()"
    ]
   },
@@ -96,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
