Add new examples

--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -36,11 +36,12 @@
     "p.new_level(  '3', energy(-20.6, 'kcalmol'))\n",
     "p.new_level('TS5', energy( -6.9, 'kcalmol'))\n",
     "p.new_level(  '4', energy(-26.8, 'kcalmol'))\n",
-    "p.new_branch('2')\n",
-    "p.new_level('TS6', energy(  7.4, 'kcalmol'), offset=1.8, color='red')\n",
-    "p.new_level('EC1', energy(-18.0, 'kcalmol'), offset=1.2, color='red')\n",
-    "p.new_level('TS7', energy( -6.5, 'kcalmol'), offset=1.2, color='red')\n",
-    "p.add_level('3')\n",
+    "p.new_profile()\n",
+    "p.new_level(  '1a', energy(  12.0, 'kcalmol'), color='blue')\n",
+    "p.new_level('TS1a', energy( 23.4, 'kcalmol'), color='blue')\n",
+    "p.new_level(  '2a', energy(11.7, 'kcalmol'), color='blue')\n",
+    "p.new_level('TS2a', energy(31.0, 'kcalmol'), color='blue')\n",
+    "p.new_level(  'BC', energy(18.4, 'kcalmol'), color='blue')\n",
     "\n",
     "# Visualizar el diagrama\n",
     "p.render()"
@@ -54,11 +55,11 @@
    "outputs": [],
    "source": [
     "# Guardar el diagrama como SVG\n",
-    "p.write(\"diagram1.svg\")\n",
+    "p.write(\"diagram2.svg\")\n",
     "# Guardar el diagrama como PDF\n",
-    "p.write(\"diagram1.pdf\")\n",
+    "p.write(\"diagram2.pdf\")\n",
     "# Guardar el diagrama como PNG\n",
-    "p.write(\"diagram1.png\", scale=1)"
+    "p.write(\"diagram2.png\", scale=1)"
    ]
   }
  ],
